force-app/main/default/objects/Product_Available_Inventory__c/Product_Available_Inventory__c.object-meta.xml
<CustomObject>
    <label>Product Available Inventory</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Available Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>