force-app/main/default/objects/Product_Available_Inventory__c/fields/BRQTY__c.field-meta.xml
<CustomField>
    <fullName>BRQTY__c</fullName>
    <description>借机数量</description>
    <label>BRQTY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>