force-app/main/default/objects/Product_Available_Inventory__c/fields/CHARG__c.field-meta.xml
<CustomField>
    <fullName>CHARG__c</fullName>
    <description>批号</description>
    <label>CHARG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>