force-app/main/default/objects/Product_Available_Inventory__c/fields/DNQTY__c.field-meta.xml
<CustomField>
    <fullName>DNQTY__c</fullName>
    <description>交货单数量</description>
    <label>DNQTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>