force-app/main/default/objects/Product_Available_Inventory__c/fields/EAN11__c.field-meta.xml
<CustomField>
    <fullName>EAN11__c</fullName>
    <description>EAN</description>
    <label>EAN11</label>
    <length>18</length>
    <type>Text</type>
</CustomField>