force-app/main/default/objects/Product_Available_Inventory__c/fields/ERSDA__c.field-meta.xml
<CustomField>
    <fullName>ERSDA__c</fullName>
    <description>创建日期</description>
    <label>ERSDA</label>
    <type>Date</type>
</CustomField>