force-app/main/default/objects/Product_Available_Inventory__c/fields/MATNR__c.field-meta.xml
<CustomField>
    <fullName>MATNR__c</fullName>
    <description>物料号</description>
    <label>MATNR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>