force-app/main/default/objects/Product_Available_Inventory__c/fields/MTART__c.field-meta.xml
<CustomField>
    <fullName>MTART__c</fullName>
    <description>物料类型</description>
    <label>MTART</label>
    <length>4</length>
    <type>Text</type>
</CustomField>