force-app/main/default/objects/Product_Available_Inventory__c/fields/UBQTY__c.field-meta.xml
<CustomField>
    <fullName>UBQTY__c</fullName>
    <description>内部转储单数量</description>
    <label>UBQTY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>