force-app/main/default/objects/Product_Available_Inventory__c/fields/WERKS__c.field-meta.xml
<CustomField>
    <fullName>WERKS__c</fullName>
    <description>工厂</description>
    <label>WERKS</label>
    <length>4</length>
    <type>Text</type>
</CustomField>