force-app/main/default/objects/Product_Available_Inventory__c/fields/ZCUSMODEL__c.field-meta.xml
<CustomField>
    <fullName>ZCUSMODEL__c</fullName>
    <description>客户型号</description>
    <label>ZCUSMODEL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>