force-app/main/default/objects/Product_Available_Inventory__c/fields/ZKYKC__c.field-meta.xml
<CustomField>
    <fullName>ZKYKC__c</fullName>
    <description>可用库存数量</description>
    <label>ZKYKC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>