force-app/main/default/objects/Product_Available_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WERKS__c</columns>
    <columns>ZCUSMODEL__c</columns>
    <columns>ZKYKC__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>