force-app/main/default/objects/Product_Available_Inventory__c/listViews/AU_inventory.listView-meta.xml
<ListView>
    <fullName>AU_inventory</fullName>
    <columns>NAME</columns>
    <columns>WERKS__c</columns>
    <columns>ZCUSMODEL__c</columns>
    <columns>ZKYKC__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WERKS__c</field>
        <operation>equals</operation>
        <value>8200</value>
    </filters>
    <label>AU inventory</label>
</ListView>